--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "scripts": {
     "android": "expo run:android",
-    "android:build": "eas build --platform android",
-    "android:setup": "node scripts/setup-expo-android.js",
-    "android:backup": "node scripts/backup-android-files.js",
+    "android:keystore": "node scripts/paste-keystore.js",
     "ios": "expo run:ios",
     "lint": "eslint .",
     "start": "expo start",
